infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: nickraj/orders
          ports:
            - containerPort: 3000
          env: # Add this section to reference the JWT_KEY from the secret
            - name: MONGO_URI
              value: "mongodb://orders-mongo-srv:27017/orders"
            - name: KAFKA_BROKER_ID
              value: "kafka:9092"
            - name: KAFKA_CLIENT_ID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: JWT_KEY
              valueFrom:
                secretKeyRef:
                  name: jwt-secret
                  key: JWT_KEY

---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
