infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: nickraj/payments
          ports:
            - containerPort: 3000
          env: # Add this section to reference the JWT_KEY from the secret
            - name: MONGO_URI
              value: "mongodb://payments-mongo-srv:27017/payments"
            - name: KAFKA_BROKER_ID
              value: "kafka:9092"
            - name: KAFKA_CLIENT_ID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: JWT_KEY
              valueFrom:
                secretKeyRef:
                  name: jwt-secret
                  key: JWT_KEY

---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
